# digital_filter_visualiser

./: .gitignore  .gitmodules  README.md  build.bat  build.sh
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: ButtonPanel.cpp  ButtonPanel.h  CMakeLists.txt  CoeffComponents.cpp  CoeffComponents.h  CoeffLabels.cpp  CoeffLabels.h  CoeffLabels.txt  CoeffToRootsAberth.cpp  CoeffToRootsAberth.h  CoefficientsToRoots.cpp  CoefficientsToRoots.h  ComplexPlaneEditor.cpp  ComplexPlaneEditor.h  EquationViewer.cpp  EquationViewer.h  FilterState.cpp  FilterState.h  PhaseFrequencyResponceViewer.h  PhaseFrequencyResponseCalculator.cpp  PhaseFrequencyResponseCalculator.h  PhaseFrequencyResponseViewer.cpp  PhaseFrequencyResponseViewer.h  PlayerComponent.cpp  PlayerComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorChain.h  ProcessorChainModifier.cpp  ProcessorChainModifier.h  RootsToCoefficients.cpp  RootsToCoefficients.h  StateSerializer.cpp  StateSerializer.h  Utilities.h  ValueChangeBroadcaster.h  context.h  profile.cpp  (+3 more)
tests/: CoefficientsToRootsTest.h  Main.cpp  PhaseFrequencyResponseTest.h  ProcessorChainModifierTest.h  RootsToCoefficientsTest.h  TestHelper.h
